--- a/PaymentCrudApp/angular.json
+++ b/PaymentCrudApp/angular.json
@@ -51,7 +51,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -77,7 +78,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -86,10 +93,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "PaymentCrudApp:build:production"
+              "buildTarget": "PaymentCrudApp:build:production"
             },
             "development": {
-              "browserTarget": "PaymentCrudApp:build:development"
+              "buildTarget": "PaymentCrudApp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -97,7 +104,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PaymentCrudApp:build"
+            "buildTarget": "PaymentCrudApp:build"
           }
         },
         "test": {
@@ -113,7 +120,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
